add beginning functionality for page number button

--- a/readingFunctionality/templates/readingFunctionality/home.html
+++ b/readingFunctionality/templates/readingFunctionality/home.html
@@ -12,7 +12,11 @@
         <input type="file" id="actual-btn" hidden />
           {% csrf_token %}
         <label for="actual-btn" id="uploadButton" class="btn btn-dark">Upload</label>
+
+
       </div>
+<!--        <label for="pageNumber">Page number</label>-->
+<!--          <input type="text" id="pageNumber" name="fname">-->
 
       <div class="row" id="translation-section">
           <h1 id="word"> </h1>
