--- a/readingFunctionality/templates/readingFunctionality/home.html
+++ b/readingFunctionality/templates/readingFunctionality/home.html
@@ -15,8 +15,8 @@
 
 
       </div>
-<!--        <label for="pageNumber">Page number</label>-->
-<!--          <input type="text" id="pageNumber" name="fname">-->
+        <label for="pageNumber">Page number</label>
+        <input type="text" id="pageNumber" name="fname">
 
       <div class="row" id="translation-section">
           <h1 id="word"> </h1>
