--- a/readingFunctionality/static/design/style.css
+++ b/readingFunctionality/static/design/style.css
@@ -34,7 +34,7 @@ html, body, .container {
 
 #upload-section {
     display: grid;
-    height: 15%;
+    height: 100px;
 }
 
 #translation-section {
@@ -48,7 +48,7 @@ html, body, .container {
 
 #uploadButton {
 width: 90%;
-height: 50%;
+height: 40%;
 margin: auto;
 margin-bottom; 20px
 border-radius: 40px;
@@ -81,6 +81,7 @@ border-radius: 40px;
     margin-left: 10px;
     margin-right: 10px;
     overflow-y: scroll;
+    direction: rtl;
 
 }
 
