--- a/readingFunctionality/templates/readingFunctionality/home.html
+++ b/readingFunctionality/templates/readingFunctionality/home.html
@@ -6,7 +6,7 @@
 
 
 <div class="container h-100 align-items-center">
-    <h3> Note: this currently only support arabic text < 10 pages in length</h3>
+    <h3> Note: this currently only support arabic pdfs of length no more than 2</h3>
   <div class="row">
     <div class="col-md-3 no-float ">
       <div class="row" id="upload-section">
