change text output size and remove label

--- a/readingFunctionality/static/design/style.css
+++ b/readingFunctionality/static/design/style.css
@@ -90,4 +90,6 @@ border-radius: 40px;
     margin-right: 0px;
     margin-top: 5px;
     margin-bottom: 5px;
-}
+    font-size: 30px;
+    font-weight:bold;
+  }
