added a few features

--- a/readingFunctionality/static/design/style.css
+++ b/readingFunctionality/static/design/style.css
@@ -93,3 +93,14 @@ border-radius: 40px;
     font-size: 30px;
     font-weight:bold;
   }
+
+#loadText {
+    margin-top: 30px;
+}
+
+#previousPage{
+    margin-top: 30px;
+}
+#nextPage {
+    margin-top: 30px;
+}
