--- a/readingFunctionality/templates/base.html
+++ b/readingFunctionality/templates/base.html
@@ -21,7 +21,7 @@
 <nav class="navbar">
     <div class="container-fluid justify-content-center">
         <nav class="navbar navbar-white bg-white me-auto">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="{% url 'home' %}">
                 <img src="{% static 'design/logo.png' %}" width="130" height="130" class="d-inline-block" alt="">
 
             </a>
@@ -36,10 +36,6 @@
 
           <li class="nav-item">
               <a class="nav-link text-dark" href="{% url 'logout' %}" hidden> Item two </a>
-          </li>
-
-          <li class="nav-item">
-              <a class="nav-link text-dark" href="{% url 'logout' %}" hidden> Item three </a>
           </li>
 
           <li class="nav-item">
