--- a/readingFunctionality/templates/readingFunctionality/home.html
+++ b/readingFunctionality/templates/readingFunctionality/home.html
@@ -8,6 +8,7 @@
 <div class="container h-100 align-items-center">
   <div class="row">
     <div class="col-md-3 no-float ">
+      <a class="font-weight-bold text-primary" href="{% url 'guide' %}"> How it works?  </a>
       <div class="row" id="upload-section">
         <input type="file" id="actual-btn" hidden />
           {% csrf_token %}
@@ -18,15 +19,18 @@
       </div>
         <label for="pageNumber">Page number</label>
         <input type="text" id="pageNumber" name="fname">
+        <button type="button" id="previousPage" class="btn btn-dark">Previous Page </button>
+        <button type="button" id="nextPage" class="btn btn-dark">Next Page </button> <br>
+        <button type="button" id="loadText" class="btn btn-dark">Load Text</button>
 
       <div class="row" id="translation-section">
           <h1 id="word"> </h1>
           <p id="translation-of-Word"> </p>
       </div>
 
-      <div class="row" id="upload-section">
-        <button type="button" class="btn btn-dark" id="saveWordButton" hidden>Save word</button>
-      </div>
+<!--      <div class="row" id="upload-section">-->
+<!--        <button type="button" class="btn btn-dark" id="saveWordButton" hidden>Save word</button>-->
+<!--      </div>-->
 
     </div>
 
