--- a/readingFunctionality/templates/readingFunctionality/home.html
+++ b/readingFunctionality/templates/readingFunctionality/home.html
@@ -9,14 +9,22 @@
   <div class="row">
     <div class="col-md-3 no-float ">
       <a class="font-weight-bold text-primary" href="{% url 'guide' %}"> How it works?  </a>
+
+        <select class="form-select w-100" name="language-choice" id="language-choice">
+          <option value="English">English</option>
+          <option value="Arabic">Arabic</option>
+        </select>
+        <label for="language-choice" >Choose Langauge of text</label>
+
       <div class="row" id="upload-section">
+
         <input type="file" id="actual-btn" hidden />
           {% csrf_token %}
         <label for="actual-btn" id="uploadButton" class="btn btn-dark">Upload</label>
 
 
-
       </div>
+
         <label for="pageNumber">Page number</label>
         <input type="text" id="pageNumber" name="fname">
         <button type="button" id="previousPage" class="btn btn-dark">Previous Page </button>
