--- a/readingFunctionality/static/design/style.css
+++ b/readingFunctionality/static/design/style.css
@@ -15,7 +15,6 @@ html, body, .container {
 }
 
 .container {
-    display:table;
     width: 100%;
     margin-top: -30px;
     padding: 50px 0 0 0; /*set left/right padding according to needs*/
@@ -24,26 +23,28 @@ html, body, .container {
 
 .row {
     height: 80%;
-    display: table-row;
+    border-radius: 16px;
 }
 
-.row .no-float {
-  display: table-cell;
-  float: none;
+.row .float {
+
 }
 
-#upload-section {
+#upload-section, #uploadTextSection {
     display: grid;
     height: 100px;
 }
 
-#translation-section {
-    display: contents;
-    height: 75%;
-    border-color: grey;
-    border-style: solid;
-    border-radius: 5px;
+#translation-section ,#translation-section-text {
+    display: inherit;
+    border-radius: 16px;
     margin-right: auto;
+    padding: 10px;
+    height: fit-content;
+    margin-top: 5px;
+    width: 100%;
+    background-color: #fff;
+    box-shadow: 2px 2px 1px black;
 }
 
 #uploadButton {
@@ -65,12 +66,41 @@ margin-bottom: 20px;
 
 }
 
-
 #saveWordButton {
 width: 50%;
 height: 40%;
 margin: auto;
 border-radius: 40px;
+
+
+}
+
+
+#textInputSection {
+    border-color: #ccc;
+    margin-left: 10px;
+    margin-right: 10px;
+    border: 1px solid;
+    border-radius: 16px;
+    height: 20%;
+    width: 100%;
+    border-radius: 16px;
+    overflow-y: auto;
+    margin-bottom: 10px;
+
+}
+
+#tranformedText {
+    border-color: #ccc;
+    margin-left: 10px;
+    margin-right: 10px;
+    overflow-y: scroll;
+    border: 1px solid;
+    border-radius: 16px;
+    height: 80%;
+    width: 100%;
+    margin-top: 10px;
+    border-radius: 16px;
 
 }
 
@@ -81,7 +111,9 @@ border-radius: 40px;
     overflow-y: scroll;
     border: 1px solid;
     border-radius: 16px;
-
+    height: 100%;
+    width: 75%;
+    border-radius: 16px;
 }
 
 .textButton {
@@ -102,4 +134,59 @@ border-radius: 40px;
 }
 #nextPage {
     margin-top: 30px;
+}
+
+#main-row , #uploadTextRow {
+flex-wrap: nowrap;
+padding: 45px;
+width: 100%;
+background-color: #fff;
+box-shadow: 2px 2px 1px black;
+}
+
+body {
+
+  background-color: #FFFFF0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+
+}
+
+footer {
+    background-color: black;
+    width: 100%
+}
+#footer-company-sign {
+    color: white
+}
+#logo {
+
+    background-color: #FFFFF0;
+    font-size: 39px;
+    text-decoration: none;
+    color: #03040a;
+    font-weight: bold;
+    padding-top: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 30px;
+
+}
+
+#parseText, #resetTextButton {
+
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+
+#home-page-container {
+
+    justify-content: center;
+    align-items: center;
+    display: grid;
+
+}
+
 }
