add syriac language as an option

--- a/readingFunctionality/templates/readingFunctionality/upload-doc.html
+++ b/readingFunctionality/templates/readingFunctionality/upload-doc.html
@@ -13,6 +13,7 @@
         <select class="form-select w-100" name="language-choice" id="language-choice">
           <option value="English">English</option>
           <option value="Arabic">Arabic</option>
+          <option value="Syriac">Syriac</option>
         </select>
         <label for="language-choice" >Choose Langauge of text</label>
 
