--- a/readingFunctionality/templates/readingFunctionality/upload-doc.html
+++ b/readingFunctionality/templates/readingFunctionality/upload-doc.html
@@ -27,10 +27,11 @@
       </div>
 
         <label for="pageNumber">Page number</label>
-        <input type="text" id="pageNumber" name="fname">
+        <input type="text" id="pageNumber" name="fname"> <br>
+        <button type="button" id="loadText" class="btn btn-dark">Load Text</button> <br> <br>
         <button type="button" id="previousPage" class="btn btn-dark">Previous Page </button>
         <button type="button" id="nextPage" class="btn btn-dark">Next Page </button> <br>
-        <button type="button" id="loadText" class="btn btn-dark">Load Text</button>
+
 
 
     </div>
